<resources>
    <string name="app_name">ArsenalPedia</string>
    <string name="players_name">Martin Odegaard</string>
    <string name="description">Martin Ødegaard adalah gelandang serang asal Norwegia yang bermain untuk Arsenal di Liga Inggris. Bergabung secara permanen pada tahun 2021 setelah masa pinjaman sukses dari Real Madrid, Ødegaard segera menjadi salah satu pemain kunci di lini tengah Arsenal. Dia dikenal karena visi bermainnya yang tajam, kemampuan mengendalikan tempo permainan, serta kreativitasnya dalam memberikan umpan-umpan terobosan.</string>
    <string name="about">Tentang</string>
    <string name="title_about">Tentang Saya</string>
    <string name="position">CAM/CM</string>
    <string name="country">Norwegia</string>
    <string name="teknik_title">Teknik Khusus</string>
    <string name="teknik_description">Ødegaard memiliki kontrol bola yang luar biasa, mampu menciptakan peluang dari ruang sempit, dan seringkali menjadi pengatur serangan tim. Selain itu, dia juga memiliki tendangan jarak jauh yang akurat dan rajin membantu dalam pressing ketika tim kehilangan bola.</string>
    <string name="share">Bagikan</string>
    <string name="email">d3kbudi@gmail.com</string>
    <string name="nama">Made Budi Darma Putra</string>
    <string-array name="data_name">
        <item>Martin Odegaard</item>
        <item>Bukayo Saka</item>
        <item>William Saliba</item>
        <item>Gabriel Magalhaes</item>
        <item>Kai Havertz</item>
        <item>David Raya</item>
        <item>Leandro Trossard</item>
        <item>Gabriel Martinelli</item>
        <item>Declan Rice</item>
        <item>Riccardo Calafiori</item>
        <item>Jurrien Timber</item>
        <item>Mikel Merino</item>

        
    </string-array>
    <string-array name="data_description">
        <item>Martin Ødegaard adalah gelandang serang asal Norwegia yang bermain untuk Arsenal di Liga Inggris. Bergabung secara permanen pada tahun 2021 setelah masa pinjaman sukses dari Real Madrid, Ødegaard segera menjadi salah satu pemain kunci di lini tengah Arsenal. Dia dikenal karena visi bermainnya yang tajam, kemampuan mengendalikan tempo permainan, serta kreativitasnya dalam memberikan umpan-umpan terobosan.</item>
        <item>Bukayo Saka adalah pemain sayap serba bisa asal Inggris yang bermain untuk Arsenal. Ia merupakan produk akademi Arsenal dan menjalani debutnya di tim utama pada 2018. Saka dikenal karena kecepatannya, teknik dribbling yang halus, dan kecerdasan taktis di lapangan. Berposisi sebagai winger kanan, Saka sering menjadi ancaman utama bagi lini belakang lawan dengan kemampuannya menusuk dari sisi sayap dan menciptakan peluang. Selain itu, ia juga mahir menggunakan kedua kakinya, meskipun lebih dominan dengan kaki kirinya.</item>
        <item>William Saliba adalah bek tengah asal Prancis yang bermain untuk Arsenal. Dia bergabung dengan klub pada 2019 dari Saint-Étienne, namun baru benar-benar mulai menunjukkan potensinya di tim utama Arsenal pada musim 2022/2023 setelah menjalani beberapa masa pinjaman di Prancis. Saliba dikenal karena fisiknya yang tangguh, kemampuan membaca permainan, dan ketenangannya dalam menguasai bola, meskipun usianya masih muda. Dia cepat beradaptasi di Liga Inggris dan segera menjadi salah satu pemain inti di lini pertahanan Arsenal.</item>
        <item>Gabriel Magalhães adalah bek tengah asal Brasil yang bermain untuk Arsenal. Ia bergabung dengan klub pada tahun 2020 dari Lille dan dengan cepat menjadi pilar utama di lini pertahanan tim. Gabriel dikenal karena fisiknya yang kokoh, ketenangannya di bawah tekanan, serta ketangguhannya dalam duel udara dan darat. Sebagai bek kiri dari pasangan bek tengah, Gabriel memiliki peran penting dalam menjaga keseimbangan pertahanan Arsenal dan sering terlibat dalam situasi krusial yang menentukan keberhasilan tim dalam bertahan.</item>
        <item>Kai Havertz adalah gelandang serang asal Jerman yang bergabung dengan Arsenal pada tahun 2023 setelah sebelumnya bermain untuk Chelsea. Di Chelsea, Havertz dikenal sebagai pemain yang serba bisa, mampu beroperasi di berbagai posisi di lini tengah dan serangan. Dengan tinggi badan yang menjulang, dia memiliki keunggulan fisik dan teknik yang memukau, serta kemampuan untuk berkontribusi baik dalam mencetak gol maupun memberikan assist.</item>
        <item>David Raya adalah kiper asal Spanyol yang bergabung dengan Arsenal pada tahun 2023 dari Brentford. Sebelum bergabung dengan Arsenal, Raya dikenal sebagai salah satu kiper terbaik di Liga Inggris, dengan penampilan yang konsisten dan kemampuan yang solid dalam mengantisipasi serangan lawan. Dengan postur tubuh yang tinggi dan kemampuan refleks yang baik, Raya memiliki keunggulan dalam menghalau tendangan lawan dan menangkap bola dari situasi set-piece.</item>
        <item>Leandro Trossard adalah pemain sayap asal Belgia yang bergabung dengan Arsenal pada Januari 2023 setelah bermain untuk Brighton dan Hove Albion. Trossard dikenal sebagai pemain yang sangat serba bisa, mampu beroperasi di berbagai posisi di lini depan, termasuk sebagai winger, penyerang tengah, atau bahkan sebagai gelandang serang. Dengan keterampilan dribbling yang baik dan kecepatan yang mengesankan, dia menjadi ancaman yang signifikan bagi pertahanan lawan.</item>
        <item>Gabriel Martinelli adalah pemain sayap muda asal Brasil yang bermain untuk Arsenal. Bergabung dengan klub pada tahun 2019 dari klub Brasil, Ituano, Martinelli dengan cepat menunjukkan bakatnya dan menjadi salah satu pemain kunci di lini serang Arsenal. Dia dikenal karena kecepatannya, keterampilan dribbling yang mengesankan, dan kemampuan untuk mencetak gol dari berbagai posisi. Gaya bermainnya yang agresif dan determinasi yang tinggi membuatnya menjadi ancaman serius bagi lini belakang lawan.</item>
        <item>Declan Rice adalah gelandang bertahan asal Inggris yang bergabung dengan Arsenal pada tahun 2023 dari West Ham United. Sebelumnya, Rice telah menunjukkan performa yang mengesankan di Liga Premier dan menjadi salah satu gelandang bertahan paling dihormati di Inggris. Dengan postur yang tinggi dan fisik yang kuat, Rice dikenal sebagai pemain yang mampu mengendalikan lini tengah, mengintersepsi umpan lawan, dan memutus serangan dengan efektif.</item>
        <item>Riccardo Calafiori adalah bek kiri asal Italia yang saat ini bermain untuk Arsenal. Calafiori mulai menarik perhatian saat bermain di AS Roma, di mana dia menunjukkan bakat dan kemampuan yang menjanjikan sebagai bek muda. Dikenal karena kecepatan, kemampuan defensif, dan teknik yang baik, Calafiori memiliki potensi untuk berkembang menjadi salah satu bek kiri yang handal di Liga Inggris.</item>
        <item>Jurrien Timber adalah bek tengah asal Belanda yang bergabung dengan Arsenal pada tahun 2023 dari Ajax Amsterdam. Dikenal karena kemampuan bertahannya yang solid, Timber memiliki karakteristik fisik yang baik dan kemampuan teknis yang memadai. Dia mampu beroperasi baik sebagai bek tengah maupun bek kanan, menjadikannya sebagai pemain yang fleksibel di lini pertahanan. Timber telah menunjukkan bakatnya di Eredivisie, di mana dia menjadi salah satu bek muda yang paling menjanjikan.</item>
        <item>Mikel Merino adalah gelandang asal Spanyol yang saat ini bermain untuk Arsenal. Sebelumnya, dia dikenal karena performanya yang mengesankan di Real Sociedad, di mana dia memainkan peran kunci di lini tengah dan membantu tim meraih kesuksesan di La Liga. Merino dikenal karena kemampuan teknisnya yang sangat baik, visi permainan yang tajam, dan kemampuannya untuk mengatur tempo permainan, menjadikannya sebagai pengatur serangan yang efektif.</item>
    </string-array>
    <string-array name="data_position">
        <item>CAM/CM</item>
        <item>RW</item>
        <item>CB</item>
        <item>CB</item>
        <item>ST</item>
        <item>GK</item>
        <item>LW/CF</item>
        <item>LW</item>
        <item>CDM</item>
        <item>LB/CB</item>
        <item>RB/CB</item>
        <item>CM</item>
    </string-array>
    <string-array name="data_country">
        <item>Norwegia</item>
        <item>Inggris</item>
        <item>Prancis</item>
        <item>Brazil</item>
        <item>Jerman</item>
        <item>Spanyol</item>
        <item>Belgia</item>
        <item>Brazil</item>
        <item>Inggris</item>
        <item>Italia</item>
        <item>Belanda</item>
        <item>Spanyol</item>
    </string-array>
</resources>