<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayersDetail">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_detail_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="48dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp">

            <ImageView
                android:id="@+id/img_detail_players"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:scaleType="fitXY"
                android:src="@drawable/odegaard"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_detail_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/players_name"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_detail_players"
                app:layout_constraintTop_toTopOf="@+id/img_detail_players" />

            <TextView
                android:id="@+id/tv_detail_position"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/position"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_detail_name"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_name" />

            <TextView
                android:id="@+id/tv_detail_country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_detail_name"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_position" />


            <TextView
                android:id="@+id/tv_detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="16dp"
                android:justificationMode="inter_word"
                android:text="@string/description"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_detail_players" />

            <TextView
                android:id="@+id/tv_ability_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/teknik_title"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tv_detail_description"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_description"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_description" />

            <TextView
                android:id="@+id/tv_detail_age"
                style="bold"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:justificationMode="inter_word"
                android:text="@string/teknik_description"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_ability_title" />

            <Button
                android:id="@+id/action_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/share"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_age" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/action_share" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</ScrollView>